--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Electron boilerplate</title>
+		<title>menu weather</title>
 		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
 		<div class="container">
 			<header>
-				<h1>Electron boilerplate</h1>
+				<h1>MENU WEATHER</h1>
 			</header>
 			<section class="main"></section>
 			<footer></footer>
